@@ -1,4 +1,5 @@
 VERSION=1.9.1
+TAG=pycups-`echo $(VERSION) | tr . _`
 
 PYTHONVERS = python2.4
 
@@ -16,14 +17,14 @@ clean:
 	-rm -rf build cups.so *.pyc *~
 
 tag:
-	TAG=pycups-`echo $(VERSION) | tr . _` ; \
-	cvs tag -c $$TAG
+	cvs tag -c $(TAG)
 
 dist:
+	cvs export -r $(TAG) pycups
 	mkdir pycups-$(VERSION)
-	cp -a $(SOURCES) $(DIST) pycups-$(VERSION)
+	cd pycups; cp -a $(SOURCES) $(DIST) ../pycups-$(VERSION); cd ..
 	tar jcf pycups-$(VERSION).tar.bz2 pycups-$(VERSION)
-	rm -rf pycups-$(VERSION)
+	rm -rf pycups-$(VERSION) pycups
 
 install:
 	python setup.py install
